# petit-filou

./: .dockerignore  .lycheeignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  cliff.toml  release-plz.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge.yaml  bin.yaml  cd.yaml  ci.yaml  ci.yml  coverage.yaml  dependabot-auto-merge.yaml  docker.yaml  links.yaml  nightly.yaml  release-plz-auto-merge.yaml  release.yaml  release.yml
pf_cli/: CHANGELOG.md  Cargo.toml
pf_cli/src/: lib.rs  main.rs
pf_cmd/: Cargo.toml
pf_cmd/src/: lib.rs  main.rs
pf_cmd/tests/: integration_tests.rs
pf_lib/: CHANGELOG.md  Cargo.toml  README.md  build.rs
pf_lib/src/: api.rs  config.rs  finder.rs  lib.rs  link_utils.rs  mime_types.rs  url_extractor.rs
pf_lib/tests/: integration_test.rs  integration_tests.rs
src/: args.rs  lib.rs  main.rs
tests/: integration_test.rs
