[workspace]
resolver = "2"
members = ["pf_cmd", "pf_lib"]

[workspace.dependencies]
futures-util = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
