[workspace]
resolver = "2"
members = ["pf_cmd", "pf_lib"]

[workspace.dependencies]
futures-util = "0.3.31"
regex = "1.11.1"
tokio = { version = "1.45.1", features = ["full"] }

[profile.dev]
codegen-units = 256
debug = false
debug-assertions = false
incremental = true
lto = false
opt-level = 3
overflow-checks = true
panic = 'unwind'
rpath = false
split-debuginfo = "unpacked"
strip = "debuginfo"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 0
overflow-checks = false
panic = "abort"
rpath = false
split-debuginfo = "unpacked"
strip = true
