[package]
name = "pf_cli"
version = "1.0.0"
authors = ["petit-chat"]
description = "petit-filou scans wordpress websites to find videos"
documentation = "https://github.com/petit-chat/petit-filou"
homepage = "https://github.com/petit-chat/petit-filou"
repository = "https://github.com/petit-chat/petit-filou"
keywords = ["video-scraper", "video", "wordpress", "wp-scraper", "wp-video"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "pf"
path = "src/main.rs"

[dependencies]
log.workspace = true
pf_lib = { version = "3.0.1", path = "../pf_lib" }
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
