[package]
name = "pf_cmd"
version = "0.1.1"
authors = ["petit-chat"]
description = "petit-filou scans wordpress websites to find videos"
repository = "https://github.com/petit-chat/petit-filou"
keywords = ["video-scraper", "video", "wordpress", "wp-scraper", "wp-video"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"
edition = "2021"
readme = "../README.md"

[[bin]]
name = "pf"
path = "src/main.rs"

[dependencies]
futures-util.workspace = true
pf_lib = { path = "../pf_lib", version = "0.1.0" }
clap = { version = "4.5.29", features = ["derive"] }
tokio.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
