[package]
name = "pf_lib"
version = "2.0.0"
authors = ["petit-chat"]
description = "petit-filou core library"
documentation = "https://github.com/petit-chat/petit-filou"
homepage = "https://github.com/petit-chat/petit-filou"
repository = "https://github.com/petit-chat/petit-filou"
keywords = ["video-scraper", "video", "wordpress", "wp-scraper", "wp-video"]
categories = ["api-bindings"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
log.workspace = true
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
regex = "1.10.4"
serde_json = "1.0"

[dev-dependencies]
mockito = "1.4.0"

[features]
default = ["mp4", "mov"]
avi = []
flv = []
mov = []
mp4 = []
mpeg = []
webm = []
wmv = []
