[package]
name = "pf_lib"
version = "0.1.8"
authors = ["petit-chat"]
description = "petit-filou core library"
repository = "https://github.com/petit-chat/petit-filou"
keywords = ["video-scraper", "video", "wordpress", "wp-scraper", "wp-video"]
categories = ["api-bindings", "parsing"]
license = "GPL-3.0-or-later"
edition = "2021"
build = "build.rs"

[dependencies]
async-stream = "0.3.6"
futures-core = "0.3.31"
futures-util.workspace = true
lazy_static = "1.4.0"
reqwest = { version = "0.12.21", default-features = false, features = [
    "json",
    "rustls-tls",
] }
regex.workspace = true
serde_json = "1.0"
tokio.workspace = true

[dev-dependencies]
mockito = "1.7.0"

[features]
default = ["mp4", "mov"]
avi = []
flv = []
mov = []
mp4 = []
mpeg = []
webm = []
wmv = []
